Fixed Floats
Also fixed the Comments tab not showing among other things

--- a/includes/css/lightbox.css
+++ b/includes/css/lightbox.css
@@ -97,9 +97,6 @@
     .mfp-preloader a:hover {
       color: white; }
 
-.mfp-s-ready .mfp-preloader {
-  display: none; }
-
 .mfp-s-error .mfp-content {
   display: none; }
 
